// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render Checkbox checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-checked="true"
    aria-labelledby="_r_1_"
    checked=""
    class="c1 c2"
    id="_r_0_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_0_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="_r_0_"
      id="_r_1_"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  cursor: not-allowed;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-checked="true"
    aria-labelledby="_r_m_"
    checked=""
    class="c1 c2"
    disabled=""
    id="_r_l_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="_r_l_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6"
      disabled=""
      for="_r_l_"
      id="_r_m_"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  cursor: not-allowed;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_s_"
    class="c1 c2"
    disabled=""
    id="_r_r_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="_r_r_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6"
      disabled=""
      for="_r_r_"
      id="_r_s_"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox disabled unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  cursor: not-allowed;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
  background: #F6F7FC;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby="_r_p_"
    class="c1 c2"
    disabled=""
    id="_r_o_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="_r_o_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6"
      disabled=""
      for="_r_o_"
      id="_r_p_"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Checkbox indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #3C64F4;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_j_"
    class="c1 c2"
    id="_r_i_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_i_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="_r_i_"
      id="_r_j_"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby="_r_4_"
    class="c1 c2"
    id="_r_3_"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_3_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="_r_3_"
      id="_r_4_"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Checkbox with description object 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c8 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c8:active {
  color: #0024A6;
}

.c8:hover:not(:active) {
  color: #0024A6;
}

.c9 {
  font-size: 0.875rem;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby="_r_7_"
    class="c1 c2"
    id="_r_6_"
    name="test-group"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_6_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="_r_6_"
      id="_r_7_"
    >
      Unchecked
    </label>
    <p
      class="c7"
    >
      description
       
      <a
        class="c8 c9"
        href="bar"
        target="foo"
      >
        learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`render Checkbox with description string 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c6 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby="_r_g_"
    class="c1 c2"
    id="_r_f_"
    name="test-group"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_f_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <div
    class="c5"
  >
    <label
      class="c6"
      for="_r_f_"
      id="_r_g_"
    >
      Unchecked
    </label>
    <p
      class="c7"
    >
      description text
    </p>
  </div>
</div>
`;

exports[`render Checkbox with img props 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c7 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c7:last-child {
  margin-bottom: 0;
}

.c6 {
  margin-left: 0.5rem;
}

.c5 {
  margin-inline-start: 0.5rem;
  object-fit: contain;
  flex-shrink: 0;
}

.c0 {
  align-items: center;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

<div
  class="c0"
>
  <input
    aria-checked="false"
    aria-labelledby="_r_d_"
    class="c1 c2"
    id="_r_c_"
    name="test-group"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_c_"
  >
    <svg
      aria-hidden="true"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
      />
    </svg>
  </label>
  <img
    alt="Thumbnail"
    class="c5"
    height="100"
    src="https://example.com/thumbnail.png"
    width="100"
  />
  <div
    class="c6"
  >
    <label
      class="c7"
      for="_r_c_"
      id="_r_d_"
    >
      Unchecked
    </label>
  </div>
</div>
`;
